--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
 Hello World
+# **My portfolio**
+## **_ПІБ та контактні дані_**
+### ПІБ - Юхимчук Денис 
+### Телефон - 0973337016
+## **_Вміння та навички_**
+### Програмування на c#
+### Аналіз даних та статистика
+### Робота в команді та співпраця з одногрупниками
+## Посилання на проекти
+### [Проект 1](https://github.com/ShepelM1/PR1)
+### [Проект 2](https://github.com/ShepelM1/PR1/tree/main/LAB2)
+### [Проект 3](https://github.com/ShepelM1/ShepelM1.github.io)
+## Посилання на соц.мережі
+### [Telegram](https//t.me/tSoYN1)
